# lisans-token

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: database.py  main.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/license/: page.tsx
frontend/lib/: soroban.ts
frontend/my-frontend/src/: App.jsx
sozlesme/proje/contracts/hello-world/: Cargo.toml
sozlesme/proje/contracts/hello-world/src/: lib.rs  test.rs
