[package]
name = "lisans_kontrati" # Sözleşme Adı
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # WASM dosyası oluşturacağını belirtir
doctest = false

[dependencies]
soroban-sdk = { version = "20.1.0" } # En son stabil sürüm kullanılmalı

[dev-dependencies]
soroban-sdk = { version = "20.1.0", features = ["testutils"] }